k8s/awasm-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: awasm
spec:
  selector:
    matchLabels:
      app: redis
      role: master
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
        - name: master
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: awasm
  labels:
    app: redis
    role: master
spec:
  selector:
    app: redis
    role: master
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30379
