k8s/awasm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awasm-service
  namespace: awasm
  labels:
    app: awasm
spec:
  selector:
    app: awasm
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  #
  # if you want to expose the service to the outside (without a load balancer in front)
  # type: NodePort
  #
  # if you want gorush to be accessible only within the cluster
  # type: ClusterIP
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31000
